--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<div #slider class="slider" >
-  <div #minThumb class="thumb" (mousedown)="startDragging($event, 'min')"></div>
-  <div #maxThumb class="thumb" (mousedown)="startDragging($event, 'max')"></div>
-</div>
+<!--<app-dual-slider [min]="0" [max]="10" (rangeChange)="onRangeChange($event)">
+</app-dual-slider>
+
+<div style="height: 100px;"></div>
+
+
+<app-range-slider></app-range-slider>-->
+
+<app-custom-slider></app-custom-slider>
+
