--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,8 @@
 
 <app-range-slider></app-range-slider>-->
 
-<app-custom-slider></app-custom-slider>
+<app-custom-slider>
+    <input lnscSliderStartThumb [(ngModel)]="helloTest" (ngModelChange)="somethingChanged($event)" type="range" />
+    <input type="range"/>
+</app-custom-slider>
 
