--- a/src/app/custom-slider/custom-slider.component.html
+++ b/src/app/custom-slider/custom-slider.component.html
@@ -18,6 +18,7 @@
         <span thumb style="left:0%;" *ngIf="isRange"></span>
         <span thumb style="left:100%;" *ngIf="isRange"></span>
     </div>
-    <input *ngIf="isRange" #leftSlider type="range" value="0" max="100" min="0" step="1" (input)="updateLeftSlider()" />
-    <input #rightSlider type="range" value="100" max="100" min="0" step="1" (input)="isRange ? updateRightSlider() : updateVisuals()" />
+    <!--<input *ngIf="isRange" #leftSlider type="range" value="0" max="100" min="0" step="1" (input)="updateLeftSlider()" />
+    <input #rightSlider type="range" value="100" max="100" min="0" step="1" (input)="isRange ? updateRightSlider() : updateVisuals()" />-->
+    <ng-content></ng-content>
 </div>
